# oh-paa

./: .gitignore  Cargo.toml  LICENSE  config.example.toml  config.live-replay-quality.example.toml
crates/pa-analysis/: Cargo.toml
crates/pa-analysis/src/: bar_worker.rs  daily_context_worker.rs  lib.rs  models.rs  prompt_specs.rs  repository.rs  service.rs  task_factory.rs
crates/pa-analysis/tests/: bar_analysis_task.rs  daily_context_task.rs  pa_state_task.rs  task_factory.rs
crates/pa-api/: Cargo.toml
crates/pa-api/src/: admin.rs  analysis.rs  analysis_runtime.rs  error.rs  lib.rs  market.rs  router.rs  user.rs  ws.rs
crates/pa-api/tests/: smoke.rs
crates/pa-app/: Cargo.toml
crates/pa-app/src/: bootstrap.rs  lib.rs  main.rs  replay.rs  replay_config.rs  replay_live.rs  replay_probe.rs  replay_score.rs
crates/pa-app/tests/: bootstrap.rs  live_replay.rs  probe.rs  replay.rs  replay_config.rs
crates/pa-core/: Cargo.toml
crates/pa-core/src/: config.rs  debug_event.rs  error.rs  lib.rs  timeframe.rs
crates/pa-core/tests/: config.rs  timeframe.rs
crates/pa-instrument/: Cargo.toml
crates/pa-instrument/src/: lib.rs  models.rs  repository.rs  service.rs
crates/pa-instrument/tests/: provider_policy.rs  runtime_queries.rs
crates/pa-market/: Cargo.toml
crates/pa-market/src/: gateway.rs  lib.rs  models.rs  normalize.rs  open_bar.rs  provider.rs  repository.rs  service.rs  session.rs
crates/pa-market/src/providers/: eastmoney.rs  mod.rs  twelvedata.rs
crates/pa-market/tests/: backfill_idempotent.rs  gateway.rs  historical_window.rs  normalize_kline.rs  open_bar.rs  open_bar_runtime.rs  pg_repository.rs  provider_http.rs  provider_router.rs  session_aggregation.rs
crates/pa-orchestrator/: Cargo.toml
crates/pa-orchestrator/src/: dedupe.rs  executor.rs  lib.rs  llm.rs  models.rs  openai_client.rs  prompt_registry.rs  repository.rs  retry.rs  worker.rs
crates/pa-orchestrator/tests/: dedupe.rs  executor.rs  models.rs  pg_repository.rs  worker.rs
crates/pa-user/: Cargo.toml
crates/pa-user/src/: lib.rs  models.rs  prompt_specs.rs  repository.rs  service.rs  task_factory.rs
crates/pa-user/tests/: manual_user_analysis.rs  task_factory.rs
docs/: project-analysis-zh.md
docs/architecture/: phase1-runtime.md  provider-db-e2e-test-plan.md
docs/superpowers/archives/: 2026-04-22-master-archive-next-agent.md  2026-04-23-candidate-qwenplus-dsreasoner-dschat-findings.md  2026-04-23-candidate-step1-dsv32-step23-dsreasoner-stage2-report.json  2026-04-23-candidate-step2-dashscope-deepseek-v32-hardened-stage2-report.json  2026-04-23-candidate-step2-dashscope-deepseek-v32-stage2-report.json  2026-04-23-candidate-step2-dashscope-qwen-plus-hardened-stage2-report.json  2026-04-23-candidate-step2-dashscope-qwen-plus-hardened-stage3-report.json  2026-04-23-candidate-step2-dashscope-qwen-plus-hardened-v2-stage2-report.json  2026-04-23-first-pass-summary.json  2026-04-23-live-replay-findings.md
docs/superpowers/plans/: 2026-04-21-financial-pa-phase1-foundation.md  2026-04-21-phase2-llm-analysis-orchestration.md  2026-04-21-provider-db-runtime-completion.md  2026-04-22-analysis-pipeline-optimization.md  2026-04-22-live-historical-replay-implementation.md  2026-04-23-live-replay-quality-optimization.md  2026-04-24-auditable-event-ledger-orchestration.md  2026-04-26-market-gateway.md  2026-04-26-observability-foundation.md  2026-04-27-debug-client-foundation-pipeline.md  2026-04-27-debug-client-kline-charts.md  2026-04-27-debug-client-llm-trace.md  2026-04-30-dashscope-to-deepseek-v4-migration.md
docs/superpowers/specs/: 2026-04-21-financial-price-action-server-design.md  2026-04-21-phase2-llm-analysis-orchestration-design.md  2026-04-22-analysis-pipeline-optimization-design.md  2026-04-22-live-historical-replay-design.md  2026-04-23-durable-orchestration-storage-design.md  2026-04-23-live-replay-quality-optimization-design.md  2026-04-24-auditable-event-ledger-orchestration-design.md  2026-04-24-market-data-contract-analysis-runtime-design.md  2026-04-26-market-gateway-design.md  2026-04-26-observability-foundation-design.md  2026-04-27-debug-client-design.md  2026-04-30-dashscope-to-deepseek-v4-migration-design.md
migrations/: 001_initial.sql  002_phase2_analysis_orchestration.sql  004_durable_orchestration_indexes.sql
testdata/analysis_replay/: live_crypto_15m.json  probe_shared_bar_analysis_input_0830.json  probe_shared_pa_state_input.json  sample_set.json
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.tsx  main.tsx
web/src/api/: client.ts  types.ts
web/src/api/hooks/: useKline.ts  useLlmTrace.ts  usePipeline.ts
web/src/charts/: KLineChart.tsx
web/src/components/Card/: Card.tsx
web/src/components/Dropdown/: Dropdown.tsx
web/src/components/InstrumentSwitcher/: InstrumentSwitcher.tsx
web/src/components/MetricCard/: MetricCard.tsx
web/src/components/Segmented/: Segmented.tsx
web/src/components/Sidebar/: Sidebar.tsx
web/src/components/StatusPill/: StatusPill.tsx
web/src/layout/: AppShell.tsx
web/src/pages/: KLinePage.tsx  LlmTracePage.tsx  PipelinePage.tsx  TaskDetailPage.tsx
web/src/pages/kline/: DataInspector.tsx  KeyLevels.tsx  PaBarReading.tsx
web/src/pages/llm-trace/: PipelineStatusDots.tsx  TaskChainNode.tsx  TriggerRow.tsx
web/src/pages/pipeline/: EventStream.tsx  InstrumentCard.tsx
web/src/pages/task-detail/: LlmResponseCard.tsx  PromptInputCard.tsx  ResultCard.tsx  TimelineCard.tsx  ValidationCard.tsx
web/src/theme/: global.css  index.ts  tokens.ts
web/src/ws/: client.ts  debugEventStore.ts  useWebSocket.ts
