[package]
name = "pa-analysis"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
pa-core = { path = "../pa-core" }
pa-orchestrator = { path = "../pa-orchestrator" }
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true

[dev-dependencies]
chrono.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
