[package]
name = "pa-api"
version.workspace = true
edition.workspace = true

[dependencies]
axum.workspace = true
pa-analysis = { path = "../pa-analysis" }
pa-core = { path = "../pa-core" }
pa-orchestrator = { path = "../pa-orchestrator" }
pa-user = { path = "../pa-user" }
serde_json.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
http-body-util = "0.1"
tokio.workspace = true
tower = "0.5"
