[package]
name = "pa-market"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
pa-core = { path = "../pa-core" }
pa-instrument = { path = "../pa-instrument" }
reqwest.workspace = true
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
uuid.workspace = true

[dev-dependencies]
axum.workspace = true
chrono.workspace = true
pa-instrument = { path = "../pa-instrument", features = ["test-fixtures"] }
rust_decimal.workspace = true
tokio.workspace = true
uuid.workspace = true
