[package]
name = "pa-orchestrator"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
jsonschema.workspace = true
pa-core = { path = "../pa-core" }
reqwest.workspace = true
serde_json.workspace = true
sha2 = "0.10"
uuid.workspace = true

[dev-dependencies]
pa-core = { path = "../pa-core" }
chrono.workspace = true
tokio.workspace = true
uuid.workspace = true
