[package]
name = "pa-user"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
pa-analysis = { path = "../pa-analysis" }
pa-core = { path = "../pa-core" }
pa-orchestrator = { path = "../pa-orchestrator" }
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true

[dev-dependencies]
chrono.workspace = true
rust_decimal.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
